<resources>
    <string name="app_name">Rob\'s Tip Calculator</string>
    <string name="bill_amount_value">10.00</string>
    <string name="bill_amount_label">Bill amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="percent">Percent</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="ten_percent">10</string>
    <string name="twelve_percent">12</string>
    <string name="fifteen_percent">15</string>
    <string name="eighteen_percent">18</string>
    <string name="twenty_percent">20</string>
    <string name="custom_percent">10.0</string>
    <string name="ten_percent_value">10</string>
    <string name="twelve_percent_value">1.20</string>
    <string name="fifteen_percent_value">1.50</string>
    <string name="eighteen_percent_value">1.80</string>
    <string name="twently_percent_value">2.00</string>
    <string name="custom_percent_value">1.00</string>
</resources>
